<resources>
    <string name="app_name">RxFireAuthExample</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="login_label">Login</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="data_migration_label">Data Migration</string>
    <string name="unspecified_label">Unspecified</string>
    <string name="allow_label">Allow</string>
    <string name="deny_label">Deny</string>
    <string name="login_description">Leave these fields empty to sign in with an anonymous account. Fill them to sign in or create a new account (and optionally link it to an anonymous account).</string>
    <string name="profile_label">Profile</string>
    <string name="display_name_hint">Display Name</string>
    <string name="update_profile_title">Update Profile</string>
    <string name="change_password_title">Change Password</string>
    <string name="providers_label">Providers</string>
    <string name="confirm_authentication_title">Confirm Authentication</string>
    <string name="confirm_authentication_dialog_title">Confirm Authentication using…</string>
    <string name="providers_description">Confirming authentication will allow you to perform sensitive operations, such as changing your password or deleting your account, for a short period of time.</string>
    <string name="data_migration_description">If set to \"Unspecified\", attempting to link an existing account with an anonymous one will result in an error. When set to either \"Allow\" or \"Deny\" will be circled back to the caller after a successful login.</string>
    <string name="sign_in_anonymously_title">Sign in anonymously</string>
    <string name="sign_in_with_apple_title">Sign in with Apple</string>
    <string name="sign_in_with_google_title">Sign in with Google</string>
    <string name="sign_out_title">Sign out</string>
    <string name="reset_anonymous_label">Reset Anonymous user after logout</string>
    <string name="delete_account_title">Delete Account</string>
    <string name="welcome_anonymous_label">Welcome, Anonymous!</string>
    <string name="welcome_name_label">Welcome, %1$s!</string>
    <string name="welcome_anonymous_subtitle">You are logged-in with an anonymous account.</string>
    <string name="welcome_generic_label">Welcome!</string>
    <string name="welcome_name_subtitle">You are logged-in with %1$s.</string>
    <string name="welcome_not_logged_label">Welcome!</string>
    <string name="welcome_not_logged_subtitle">You are not logged-in.</string>
    <string name="providers_not_logged_label">Not logged-in.</string>
    <string name="link_title">Link</string>
    <string name="insert_email_link_title">Insert an email address to link it!</string>
    <string name="sign_in_title">Sign in</string>
    <string name="loading_label">Working…</string>
    <string name="error_dialog_title">An error occurred!</string>
    <string name="cancel_title">Cancel</string>
    <string name="login_success_title">You are now logged in!</string>
    <string name="migration_required_message">Migration is required!</string>
    <string name="migration_not_required_message">Migration is not required.</string>
    <string name="old_user_id_message">Your old User ID: %1$s.</string>
    <string name="new_user_id_message">Your new User ID is: %1$s.</string>
    <string name="cool_title">Cool!</string>
    <string name="migration_required_title">Migration Required</string>
    <string name="migration_required_dialog_message">You are trying to login into an existing account while being logged-in with an anonymous account. When doing this in a real app, you should check if the user has data in the anonymous account and, if so, offer the option to merge the anonymous account with the one that the user is trying to sign into.</string>
    <string name="migrate_title">Migrate</string>
    <string name="new_password_title">New Password</string>
    <string name="new_password_message">Insert your new password below:</string>
    <string name="new_password_hint">New Password</string>
    <string name="set_title">Set</string>
    <string name="password_set_title">Password set!</string>
    <string name="password_set_message">Your new password has been set.</string>
    <string name="insert_email_password_title">Insert your email and password!</string>
    <string name="insert_email_password_message">Use the fields at the top of the screen to insert your email and password.</string>
    <string name="authentication_confirmed_title">Authentication Confirmed!</string>
    <string name="authentication_confirmed_message">You can now perform sensitive actions.</string>
    <string name="confirm_authentication_providers_message">Select the provider you\'d like to use to confirm authentication.</string>
</resources>
