<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView style="@style/CardViewRegular">

            <LinearLayout style="@style/LinearLayoutRegular">

                <TextView
                    android:id="@+id/welcome_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    tools:text="Welcome" />

                <TextView
                    android:id="@+id/subtitle_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    tools:text="You are not logged-in." />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView style="@style/CardViewRegular">

            <LinearLayout style="@style/LinearLayoutRegular">

                <TextView
                    style="@style/TextViewCardTitle"
                    android:text="@string/login_label" />

                <EditText
                    android:id="@+id/login_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/regular_margin"
                    android:autofillHints="emailAddress"
                    android:hint="@string/email_hint"
                    android:inputType="textEmailAddress" />

                <EditText
                    android:id="@+id/password_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="password"
                    android:hint="@string/password_hint"
                    android:inputType="textPassword" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            style="@style/TextViewCaption"
            android:text="@string/login_description" />

        <androidx.cardview.widget.CardView style="@style/CardViewRegular">

            <LinearLayout style="@style/LinearLayoutRegular">

                <TextView
                    style="@style/TextViewCardTitle"
                    android:text="@string/data_migration_label" />

                <RadioGroup
                    android:id="@+id/migration_radio_group"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/regular_margin">

                    <RadioButton
                        android:id="@+id/migration_radio_unspecified"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/unspecified_label" />

                    <RadioButton
                        android:id="@+id/migration_radio_allow"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/allow_label" />

                    <RadioButton
                        android:id="@+id/migration_radio_deny"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/deny_label" />

                </RadioGroup>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <TextView style="@style/TextViewCaption"
            android:text="@string/data_migration_description" />

        <androidx.cardview.widget.CardView style="@style/CardViewRegular">

            <LinearLayout style="@style/LinearLayoutRegular">

                <TextView
                    style="@style/TextViewCardTitle"
                    android:text="@string/profile_label" />

                <EditText
                    android:id="@+id/name_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="name"
                    android:hint="@string/display_name_hint"
                    android:inputType="textPersonName" />

                <Button
                    android:id="@+id/update_profile_button"
                    style="@style/ButtonRegular"
                    android:text="@string/update_profile_title"
                    android:textColor="@color/colorProfile" />

                <Button
                    android:id="@+id/change_password_button"
                    style="@style/ButtonRegular"
                    android:text="@string/change_password_title"
                    android:textColor="@color/colorPassword" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView style="@style/CardViewRegular">

            <LinearLayout
                style="@style/LinearLayoutRegular"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/TextViewCardTitle"
                    android:text="@string/providers_label" />

                <TextView
                    android:id="@+id/providers_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="Not logged-in." />

                <Button
                    android:id="@+id/confirm_authentication_button"
                    style="@style/ButtonRegular"
                    android:text="@string/confirm_authentication_title"
                    android:textColor="@color/colorPassword" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <TextView style="@style/TextViewCaption"
            android:text="@string/providers_description" />

        <androidx.cardview.widget.CardView
            style="@style/CardViewRegular">

            <LinearLayout style="@style/LinearLayoutRegular">

                <Button style="@style/ButtonRegular"
                    android:id="@+id/sign_in_button"
                    android:text="@string/sign_in_anonymously_title"
                    android:textColor="@color/colorAnonymous" />

                <Button style="@style/ButtonRegular"
                    android:id="@+id/sign_in_apple_button"
                    android:text="@string/sign_in_with_apple_title"
                    android:textColor="@color/colorSignInApple" />

                <Button style="@style/ButtonRegular"
                    android:id="@+id/sign_in_google_button"
                    android:text="@string/sign_in_with_google_title"
                    android:textColor="@color/colorSignInGoogle" />

                <Button style="@style/ButtonRegular"
                    android:id="@+id/sign_out_button"
                    android:text="@string/sign_out_title"
                    android:textColor="@color/colorSignOut" />

                <CheckBox
                    android:id="@+id/reset_anonymous_checkbox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/reset_anonymous_label" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            style="@style/CardViewRegular">

            <Button
                android:id="@+id/delete_button"
                style="@style/ButtonRegular"
                android:text="@string/delete_account_title"
                android:textColor="@color/colorDeleteAccount" />

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</ScrollView>